--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "ant-design-vue": "^4.2.6",
     "axios": "^1.7.9",
     "element-plus": "^2.9.3",
     "pinia": "^2.3.0",
@@ -20,7 +21,13 @@
     "vuetify": "^3.7.6"
   },
   "devDependencies": {
+    "@eslint/js": "^9.18.0",
     "@vitejs/plugin-vue": "^5.2.1",
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-vue": "^9.32.0",
+    "globals": "^15.14.0",
+    "prettier": "^3.4.2",
     "vite": "^6.0.5"
   }
 }
